Tighten up access controls on session extensions
